fix: deploy2